bug fix for text and overflow-y on body

--- a/parallax/common/timeline/css/demo.css
+++ b/parallax/common/timeline/css/demo.css
@@ -33,8 +33,8 @@ body {
     font-weight: 300;
     font-size: 14px; 
     color: #333;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    /*overflow-y: scroll;*/
+    /*overflow-x: hidden;*/
 }
 
 a {
