--- a/parallax/css/parallax.css
+++ b/parallax/css/parallax.css
@@ -19,10 +19,12 @@ html,body{
 }
 
 .navigation{
-	position:fixed;
-	z-index:1;
-	top:10px;
-    right: 0px;
+    font-size: 14px;
+    padding: 10px;
+    position: fixed;
+    right: 0;
+    text-transform: uppercase;
+    top: 10px;
     z-index: 1001;
 }
 .navigation li{
